feat: add month query params to read transactions route
