# backend/openapi.json
@@ -881,6 +881,16 @@
                 "tags": [
                     "Transaction"
                 ],
+                "parameters": [
+                    {
+                        "schema": {
+                            "type": "string",
+                            "pattern": "^\\d{4}-(0[1-9]|1[0-2])$"
+                        },
+                        "in": "query",
+                        "name": "month"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Default Response",
@@ -891,6 +901,16 @@
                                     "items": {
                                         "$ref": "#/components/schemas/Transaction"
                                     }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Default Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/BadRequest"
                                 }
                             }
                         }
